--- a/mainUi.ui
+++ b/mainUi.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1127</width>
+    <width>1056</width>
     <height>736</height>
    </rect>
   </property>
@@ -17,10 +17,10 @@
    <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>450</y>
-      <width>54</width>
-      <height>12</height>
+      <x>30</x>
+      <y>210</y>
+      <width>361</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -30,8 +30,21 @@
    <widget class="QPushButton" name="pushButton1">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>230</y>
+      <x>360</x>
+      <y>150</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>按钮</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton22">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>140</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -40,17 +53,77 @@
      <string>PushButton</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton22">
+   <widget class="QLabel" name="label2">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>310</y>
-      <width>75</width>
-      <height>23</height>
+      <x>30</x>
+      <y>280</y>
+      <width>361</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit1">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>440</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit2">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>480</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit3">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>520</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit4">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>570</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit1">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>220</y>
+      <width>421</width>
+      <height>191</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>460</y>
+      <width>421</width>
+      <height>211</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -59,8 +132,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1127</width>
-     <height>23</height>
+     <width>1056</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
