--- a/mainUi.ui
+++ b/mainUi.ui
@@ -6,142 +6,75 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1056</width>
-    <height>736</height>
+    <width>1099</width>
+    <height>773</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label1">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>361</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton1">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>540</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>保存</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton22">
-    <property name="geometry">
-     <rect>
-      <x>820</x>
-      <y>140</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>90</y>
-      <width>361</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="mouseTracking">
-     <bool>false</bool>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="textEdit1">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
-      <y>240</y>
-      <width>421</width>
-      <height>191</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="textEdit">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
-      <y>460</y>
-      <width>421</width>
-      <height>211</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>420</y>
-      <width>181</width>
-      <height>111</height>
+      <x>370</x>
+      <y>320</y>
+      <width>351</width>
+      <height>141</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit1"/>
-     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="labeltext1">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
        <property name="text">
-        <string>姓名</string>
+        <string>用户名</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="lineEdit1">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="labeltext2">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>密 码</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit2"/>
+      <widget class="QLineEdit" name="lineEdit2">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit3"/>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="lineEdit4"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="labeltext2">
-       <property name="text">
-        <string>年龄</string>
+      <widget class="QPushButton" name="pushButton1">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
        </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="labeltext3">
        <property name="text">
-        <string>工号</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="labeltext4">
-       <property name="text">
-        <string>绩效</string>
+        <string>保存</string>
        </property>
       </widget>
      </item>
@@ -150,19 +83,19 @@
    <widget class="QLabel" name="labeltext4_2">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>210</y>
-      <width>91</width>
-      <height>21</height>
+      <x>350</x>
+      <y>20</y>
+      <width>431</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>15</pointsize>
+      <pointsize>25</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>保存记录</string>
+     <string>齿轮加工制造生产线</string>
     </property>
    </widget>
   </widget>
@@ -171,30 +104,13 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1056</width>
-     <height>23</height>
+     <width>1099</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton22</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>826</x>
-     <y>345</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>826</x>
-     <y>421</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
