--- a/mainUione.ui
+++ b/mainUione.ui
@@ -6,39 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1099</width>
-    <height>773</height>
+    <width>1103</width>
+    <height>783</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="labeltext4_2">
+   <widget class="QPushButton" name="buttonOpenwindow">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>20</y>
-      <width>431</width>
-      <height>151</height>
+      <x>450</x>
+      <y>350</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>25</pointsize>
-     </font>
-    </property>
     <property name="text">
-     <string>自动加工界面</string>
+     <string>PushButton</string>
     </property>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
+  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1099</width>
+     <width>1103</width>
      <height>26</height>
     </rect>
    </property>
@@ -54,14 +50,35 @@
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
-     <string>设置</string>
+     <string>设定</string>
+    </property>
+    <addaction name="actionsifu"/>
+   </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>帮助</string>
     </property>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
+   <addaction name="menu_4"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionAuto">
+   <property name="text">
+    <string>Auto</string>
+   </property>
+  </action>
+  <action name="actionJOG">
+   <property name="text">
+    <string>JOG</string>
+   </property>
+  </action>
+  <action name="actionsifu">
+   <property name="text">
+    <string>伺服</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
